-
Bug
-
Resolution: Done
-
P2: Important
-
None
-
5.0.0 Beta 1
-
None
-
Win7 64-Bit
GeForce GT620M
-
c5b766638ac8cef1acebb97d5952485f5dc846ad
The Cube example in examples/opengl/cube folder only shows the cube for a few milliseconds and then goes black again.
It is not possible to rotate the cube, just like it works with the Linux Version of it.
QTBase SHA: e06999bd62
For Gerrit Dashboard: QTBUG-27281 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
37322,1 | Fixed cube opengl example | master | qt/qtbase | Status: MERGED | +2 | 0 |